Research Part IV (static analysis/linting/formatting, keys 26–40)
- Bank 15 verified dossiers: how static analysis works; Checkstyle, PMD/CPD,
  SpotBugs, Error Prone, NullAway, null-safety annotations (JSpecify), ArchUnit,
  formatters, SonarQube, IDE inspections, layering/comparison, custom rules,
  managing findings, annotation processors/Lombok. Each with a SOURCE-VERIFY report.
- Fix two banned-phrasing breaches found in the neutrality sweep ("beats", keys 03, 28).
- 40/110 dossiers now banked (Parts I–IV). Update LEDGER + CHAPTER-TRACKER.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>